k8s/department-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: departmentservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: go-ems-departmentservice
  template:
    metadata:
      labels:
        component: go-ems-departmentservice
    spec:
      containers:
        - name: go-ems-departmentservice
          image: yashjindal28/go-ems-departmentservice
          ports:
            - containerPort: 83
