k8s/employeeservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: employeeservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: go-ems-employeeservice
  template:
    metadata:
      labels:
        component: go-ems-employeeservice
    spec:
      containers:
        - name: go-ems-employeeservice
          image: yashjindal28/go-ems-employeeservice
          ports:
            - containerPort: 84
