k8s/leave-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: leaveservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: go-ems-leaveservice
  template:
    metadata:
      labels:
        component: go-ems-leaveservice
    spec:
      containers:
        - name: go-ems-leaveservice
          image: yashjindal28/go-ems-leaveservice
          ports:
            - containerPort: 82
