k8s/payroll-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: payrollservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: go-ems-payrollservice
  template:
    metadata:
      labels:
        component: go-ems-payrollservice
    spec:
      containers:
        - name: go-ems-payrollservice
          image: yashjindal28/go-ems-payrollservice
          ports:
            - containerPort: 81
