k8s/angular-frontend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: angular-frontend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: angular-ems-frontend
  ports:
    - port: 4201  
      targetPort: 4201
