k8s/authservice-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: authservice-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: go-ems-authservice
  ports:
    - port: 8080
      targetPort: 8080
