k8s/department-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: department-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: go-ems-departmentservice
  ports:
    - port: 83
      targetPort: 83
