k8s/employeeservice-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: employee-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: go-ems-employeeservice
  ports:
    - port: 84
      targetPort: 84
