k8s/leave-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: leave-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: go-ems-leaveservice
  ports:
    - port: 82
      targetPort: 82
