k8s/payroll-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: payroll-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: go-ems-payrollservice
  ports:
    - port: 81
      targetPort: 81
